[project]
# Use a slightly different name to avoid conflict with pre-existing package in pypi
name = "Recipe Manager"
dynamic = "0.1.0"
description = "Web app to manage recipes for StrangerFoods.org"
readme = "README.md"
license = { file="LICENSE"}
requires-python = ">=3.9"
keywords = ["recipe", "ingredient", "ingredients", "nlp", "parsing" ]
authors = [
    { name="Tom Strange", email="tpstrange@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
]
dependencies = { file="requirements.txt" }

[project.urls]
Source = "https://gitea.serverpi.xyz/tom/RecipeManager"

[tool.black]
target-version = ["py39"]
include = "\\.py$"
extend-exclude = "\\.ipynb$"

[tool.isort]
profile = "black"
src_paths = ["ingredient_parser", "train", "tests"]

[tool.pyright]
include = ["*.py", "tools"]
exclude = ["**/__pycache__"]

[tool.flake8]
max-line-length = 88
filename = "*.py"
extend-ignore = [
    # import ordering set by isort
    "E402",
    # line breaks set by black
    "W503",
    # invalid escape sequence
    "W605",
    # spaces around colons set by black
    "E203",
]
exclude = [
    "**/__pycache__",
    ".git",
    "venv"
]